[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Menu/GraphicsMenu.gd" type="Script" id=1]
[ext_resource path="res://UI/Button.png" type="Texture" id=2]

[node name="GraphicsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="GraphicText" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 40.0
text = "Graphics"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="FullscreenCheckbox" type="CheckBox" parent="."]
margin_top = 48.0
margin_right = 94.0
margin_bottom = 72.0
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VsyncCheckbox" type="CheckBox" parent="."]
anchor_top = 0.1
anchor_bottom = 0.2
margin_top = 52.0
margin_right = 94.0
margin_bottom = 58.0
pressed = true
text = "Vsync"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="FXAACheckbox" type="CheckBox" parent="."]
margin_left = -1.0
margin_top = 121.0
margin_right = 23.0
margin_bottom = 145.0
text = "FFXA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MSSADropdown" type="OptionButton" parent="."]
margin_left = 7.0
margin_top = 94.0
margin_right = 97.0
margin_bottom = 114.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -40.0
margin_right = 50.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ExitButton"]
margin_left = 40.0
margin_top = 10.0
margin_right = 80.0
margin_bottom = 50.0
mouse_filter = 1
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="FullscreenCheckbox" to="." method="_on_FullscreenCheckbox_pressed"]
[connection signal="pressed" from="VsyncCheckbox" to="." method="_on_VsyncCheckbox_pressed"]
[connection signal="pressed" from="FXAACheckbox" to="." method="_on_FXAACheckbox_pressed"]
[connection signal="item_selected" from="MSSADropdown" to="." method="_on_MSSADropdown_item_selected"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
